# termux-context-menu

./: .flake8  .gitignore  README.md  pyproject.toml  termux-url-opener
server/: __init__.py  __main__.py
termux_context_menu/: __init__.py  __main__.py  menu.css
